fixed cards overlapping

--- a/Part-1/CSS/mens_style.css
+++ b/Part-1/CSS/mens_style.css
@@ -74,7 +74,6 @@ body {
           }
         }
       }
-<<<<<<< Updated upstream
 
       /* style div with buttons such as search, div) */
       .nav_buttons {
@@ -82,40 +81,6 @@ body {
         align-items: center;
         gap: 1.2rem;
       }
-=======
-    }
-}
-.content{
-    display: grid;
-    grid-template-columns: 200px auto;
-    grid-template-areas: "aside content";
-    grid-gap:  1.5rem;
-    padding: 15px;
-}
-.sideNav{
-    grid-area: aside;
-    margin: 10px;
-}
-.container{
-    grid-area: content;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(210px,1fr));
-    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 10px; */
-    justify-items: center;
-    grid-gap: 20px;
-    padding: 10px;
-}
-.all{
-    /* width: 240px; */
-    width: 100%;
-    height: 360px;
-    background-size: cover;
-    background-color: brown;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 10px;
-    display: flex;
-    flex-direction: row;
-    align-items: end;
->>>>>>> Stashed changes
 
       /* style all icons in the nav */
       .nav_button {
@@ -147,43 +112,44 @@ body {
   grid-area: aside;
   margin: 10px;
 }
-.container {
-  padding: 5px;
+.container{
   grid-area: content;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(210px,1fr));
+  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 10px; */
+  justify-items: center;
+  grid-gap: 20px;
+  padding: 10px;
 }
-
-.all {
-  min-width: 200px;
-  min-height: 500px;
+.all{
+  /* width: 240px; */
+  width: 100%;
+  height: 360px;
   background-size: cover;
   background-color: brown;
-  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 10px; */
-  outline: auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 10px;
   display: flex;
   flex-direction: row;
   align-items: end;
 
-  .text {
-    width: 100%;
-    height: 20%;
-    background-color: white;
+  .text{
+      width: 100%;
+      height: 20%;
+      background-color: white;
+      
+      display: grid;
+      grid-template-columns: auto 50px;
+      h2{
+          padding-top: 10px;
+          padding-left: 10px;
 
-    display: grid;
-    grid-template-columns: auto 50px;
-    h2 {
-      padding-top: 10px;
-      padding-left: 10px;
-    }
-    h4 {
-      padding-top: 5px;
-      padding-left: 10px;
-      color: rgb(119, 117, 117);
-      font-family: Archivo expanded, sans-serif;
-    }
+      }
+      h4{
+          padding-top: 5px;
+          padding-left: 10px;
+          color: rgb(119, 117, 117);
+          font-family: Archivo expanded, sans-serif;
+      }
   }
   .cart_button {
     width: 30px;
